# bookNaturalLanguageProcessing_YuliVasiliev

./: README.md  chapter02_the_text_processing_pipeline.py  pyproject.toml
