[tool.poetry]
name = "booknaturallanguageprocessing_yulivasiliev"
version = "0.1.0"
description = ""
authors = ["Marcos Ferreira <ferreira.mr@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.3.0"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
